@@ -1,3 +1,6 @@
+        - Fixed --make with xhtml - previously it didn't build the
+        xhtml at all.
+
 0.0200  Sun Jun 28 09:46:15 IDT 2009
         - Removed the "all rights reserved" copyright language - it's not
         compatible with the MIT/X11 License anyway.
